# multi-profile-messaging

./: .gitignore  LIVE_DOC.md  README.md  docker-compose.override.yml  docker-compose.yml  package-lock.json  package.json
automation/: .gitignore  runners.py
automation/playwright/: README.md
automation/playwright/config/: default.json
automation/playwright/runners/: run-cookie-capture.ts  run-script.ts
automation/playwright/scripts/: cookie_capture.ts  smoke_open.ts
automation/playwright/tests/: smoke.spec.ts
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  database.py  main.py  models.py  pyproject.toml  requirements.in  requirements.txt  schemas.py
backend/alembic/: env.py
backend/alembic/versions/: 91c3f18150a3_create_initial_tables.py  dd815561f047_create_initial_tables.py
backend/connectors/: playwright_auth.py  smtp_connector.py
backend/routers/: list_manager.py  logs.py  profile.py  template.py
backend/scripts/: start.sh
backend/src/mpm/: main.py  models.py  models_1.py  schemas.py  tasks.py
backend/src/mpm/alembic/: env.py
backend/src/mpm/alembic/versions/: c56faaa235fd_profile_fields_ctreated_and_cookies_add.py
backend/src/mpm/connectors/: playwright_automation.py  smtp_connector.py
backend/src/mpm/routers/: automation.py  campaign.py  list_manager.py  logs.py  profile.py  template.py
backend/src/mpm/services/: playwright_runner.py
backend/src/mpm/tests/: conftest.py  test_email_endpoint.py  test_lists_and_logs.py  test_profiles.py  test_templates.py
docs/: THREAD_SUMMARY.md  frontend-integration-&-crud-ui.md  playwright-automation.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  routeTree.gen.d.ts  routeTree.gen.ts
frontend/src/components/: NavLink.tsx
frontend/src/components/ui/: provider.tsx
frontend/src/hooks/: useCookieCapture.ts  useLists.ts  useListsBulk.ts  useProfiles.ts  useTemplates.ts
frontend/src/pages/: ListsPage.tsx  LogsPage.tsx  ProfilesPage.tsx  TemplatesPage.tsx
frontend/src/routes/: __root.tsx  index.tsx  lists.tsx  logs.tsx  settings.tsx  templates.tsx
frontend/src/routes/settings/: $id.tsx  index.tsx  profiles.tsx
